Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.2(EOL), 10.3(EOL), 10.4(EOL), 10.5(EOL), 10.6
Description
The counter MONITOR_TABLE_REFERENCE (metadata_table_reference_count) is inconsistent at least since this change in MySQL 5.7.10: the member function dict_table_t::release() does not decrement the counter. Only dict_table_close() would do it.
Furthermore, it looks like the counter MONITOR_TABLE_CLOSE (metadata_table_handles_closed) is incremented unconditionally in ha_innobase::close(), while the call to increment MONITOR_TABLE_OPEN would be avoided if ha_innobase::open() returns an error earlier.
Given that no bug was filed about these inconsistencies so far (MySQL Bug #75966 was filed by an Oracle employee and fixed in MySQL 8.0), it looks like these counters are not important to users and can be removed.
The counter MONITOR_TABLE_OPEN (metadata_table_handles_opened) will be retained for now.
Attachments
Issue Links
- relates to
-
MDEV-15706 Remove information_schema.innodb_metrics, innodb_monitor_enable, innodb_monitor_disable
-
- Open
-
-
MDEV-25687 trx_active_transactions is inconsistent and a potential performance hog; remove it
-
- Closed
-